[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/background_main_screen.png" type="Texture" id=1]
[ext_resource path="res://sounds/BoxCat-Games-Epic-Song.mp3" type="AudioStream" id=2]
[ext_resource path="res://scripts/Initial_Menu.gd" type="Script" id=3]
[ext_resource path="res://themes/custom_theme.tres" type="Theme" id=4]

[node name="initial_menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Story_mode_Button" type="Button" parent="."]
margin_left = 133.0
margin_top = 834.0
margin_right = 433.0
margin_bottom = 984.0
theme = ExtResource( 4 )
text = "Story mode"

[node name="Co-op_mode_Button" type="Button" parent="."]
margin_left = 583.0
margin_top = 834.0
margin_right = 883.0
margin_bottom = 984.0
theme = ExtResource( 4 )
text = "co-op mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Versus_mode_Button" type="Button" parent="."]
margin_left = 1033.0
margin_top = 834.0
margin_right = 1333.0
margin_bottom = 984.0
theme = ExtResource( 4 )
disabled = true
text = "versus mode"

[node name="Configuration_Button" type="Button" parent="."]
margin_left = 1483.0
margin_top = 834.0
margin_right = 1783.0
margin_bottom = 984.0
theme = ExtResource( 4 )
text = "Configuration"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="pressed" from="Story_mode_Button" to="." method="_on_Story_mode_Button_pressed"]
[connection signal="pressed" from="Co-op_mode_Button" to="." method="_on_Coop_mode_Button_pressed"]
[connection signal="pressed" from="Versus_mode_Button" to="." method="_on_Versus_mode_Button_pressed"]
[connection signal="pressed" from="Configuration_Button" to="." method="_on_Configuration_Button_pressed"]
